--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.user-table {
+  background-color: darkgreen;
+}
+.column-head {
+  text-align: center;
+  font-size: 1.25em;
+  line-height: 1.25em;
+  color: #f5f5f5;
+}
+.column-data {
+  background-color: #f5f5f5;
+  font-size: 1em;
+  border: 1px solid darkgreen;
+}
+.table-links a {
+  color: #f5f5f5;
+}
+.new-user-button {
+  margin-bottom: 1%;
+  border-color: black;
+  background-color: saddlebrown;
+  color: #f5f5f5;
+}
+.new-user-button a:visited {
+  color: #f5f5f5;
+}
