--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,6 +23,11 @@
       <%= f.text_field :last_name, class: "form-control", placeholder: "Please enter your last name" %>
     </div>
 
+    <div class="field form-group">
+      <%= f.label :email, class: "user-labels" %>
+      <%= f.text_field :email, class: "form-control", placeholder: "Please enter your email" %>
+    </div>
+
     <div class="actions">
       <%= f.submit class: "btn btn-default submit-button"%>
     </div>
