--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,28 +2,31 @@
 
 <h1>Users</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
+<div class="user-table container-fluid col-sm-10 col-sm-offset-1">
+  <table>
+    <thead>
       <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th class="column-head">First name</th>
+        <th class="column-head">Last name</th>
+        <th class="column-head">Email</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td class="column-data col-sm-2"><%= user.first_name %></td>
+          <td class="column-data col-sm-2"><%= user.last_name %></td>
+          <td class="column-data col-sm-2"><%= user.email %></td>
+          <td class="col-sm-1 table-links"><%= link_to 'Show', user %></td>
+          <td class="col-sm-1 table-links"><%= link_to 'Edit', edit_user_path(user) %></td>
+          <td class="col-sm-1 table-links"><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New User', new_user_path %>
+  <br>
+  <%= link_to 'New User', new_user_path, class: "btn btn-default new-user-button"%>
+</div> <!-- end user-table -->
