--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,13 +2,18 @@
 
 <div class="user-form container-fluid col-sm-4 col-sm-offset-4 col-xs-10 col-xs-offset-1">
   <h3 class="user-labels">
-    <strong>First name:</strong>
+    First name:
     <%= @user.first_name %>
   </h3>
 
   <h3 class="user-labels">
-    <strong>Last name:</strong>
+    Last name:
     <%= @user.last_name %>
+  </h3>
+
+  <h3 class="user-labels">
+    Email:
+    <%= @user.email %>
   </h3>
 </div> <!-- end user-form -->
 
