--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -1,7 +1,11 @@
 <div class="product-comments container-fluid col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
   <% @comments.each do |comment| %>
     <div class="comment-box row">
-      <h4> <%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %> </em></small></h4>
+      <h4> <%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %> </em></small>
+        <% if signed_in? && current_user.admin? %>
+          <%= link_to ("<span class='glyphicon glyphicon-remove'></span>").html_safe, product_comment_path(comment.product, comment), method: :delete, data: {confirm: "Are you sure?" } %>
+        <% end %>
+      </h4>
       <div class="rated" data-score="<%= comment.rating %>"></div>
       <h4> <%= comment.body %> </h4>
     </div> <!-- end row -->
