--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -6,8 +6,9 @@
   <p class="p-margin-center price">Price per dozen $ <%= product.price %></p>
   <p class="p-margin-center price-color-code">price color code: <%= product.colour %></p>
   <div class="edit-prod-links">
-    <%= link_to 'Show', product %>
-    <%= link_to 'Edit', edit_product_path(product) %>
-    <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <% if can? :update, @product %>
+      <%= link_to 'Edit', edit_product_path(product), :class => "btn btn-warning btn-sm" %>
+      <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-warning btn-sm" %>
+    <% end %>
   </div> <!--end edit-prod-links -->
 </div> <!--end products -->
