--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,9 +7,11 @@
 <div class="product-page">
 
   <%= render @products %>
-  
+
   <div class="new-prod-link col-md-12">
-    <%= link_to 'New Product', new_product_path %>
+    <% if can? :create, @product %>
+      <%= link_to 'New Product', new_product_path, :class => "btn btn-warning btn-lg" %>
+    <% end %>
   </div> <!-- end new-prod-link -->
 
 </div> <!-- end product-page -->
