--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,6 +22,6 @@
     <div class="page-numbers col-sm-12">
       <%= will_paginate @comments %>
     </div>
-    <p class="p-margin-center col-sm-12"> <%= link_to 'All Products', products_path %> | <%= link_to 'Edit', edit_product_path(@product) %> </p>
+    <p class="p-margin-center col-sm-12"> <%= link_to 'All Products', products_path %> </p>
   </div>
 </div> <!--end show-product -->
