--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -21,6 +21,8 @@
   margin-top: 1%;
   padding-bottom: 4%;
   text-align: center;
+  font-size: 1.25em;
+  line-height: 1.5em;
 }
 .contact-form {
   margin-top: 2%;
