--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
           <td class="column-data col-sm-2"><%= user.email %></td>
           <td class="col-sm-1 table-links"><%= link_to 'Show', user %></td>
           <td class="col-sm-1 table-links"><%= link_to 'Edit', edit_user_registration_path(user) %></td>
-          <td class="col-sm-1 table-links"><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <!-- <td class="col-sm-1 table-links"><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
         </tr>
       <% end %>
     </tbody>
