--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,7 +15,9 @@
       <h4>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></h4>
       <!-- <p class="p-margin-center show-price-color-code"> price color code: <%= @product.colour %> </p> -->
       <div class="col-sm-12">
-        <h4 class="show-product-comment"> Best Comment: <%= @product.highest_rating_comment.body %> ~ Worst Comment: <%= @product.lowest_rating_comment.body %> </h4>
+        <% if @comments.size >= 2 %>
+          <h4 class="show-product-comment"> Best Comment: <%= @product.highest_rating_comment.body %> ~ Worst Comment: <%= @product.lowest_rating_comment.body %> </h4>
+        <% end %>
       </div>
       <%= render partial: "new_comment" %>
       <%= render partial: "comments" %>
