--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
     <div class="col-sm-12">
       <p class="show-product-desc"><%= @product.description %></p>
-      <p class="p-margin-center show-price">Price per dozen $ <%= number_with_precision(@product.price_in_cents * 0.01, :precision =>2)%> </p>
+      <p class="p-margin-center show-price">Price per dozen <%= number_to_currency(@product.price_in_cents * 0.01)%> </p>
 
       <div class="pay-button col-sm-12">
         <%= form_tag "/payments/create" do %>
